--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
       "name": "Omar '0m4r' Adobati",
       "email": "omar@adobati.it",
       "url": "https://github.com/0m4r"
+    },
+    {
+      "name": "Istvan Farkas",
+      "email": "ifarkas@infocentric.ch",
+      "url": "https://github.com/infocentric"
     }
   ],
   "license": "ISC",
