Add sticky footer (item stays stuck at the bottom of the page if it is not in the viewport)

--- a/package.json
+++ b/package.json
@@ -35,6 +35,11 @@
       "name": "Joël Poulin",
       "email": "jpoulin@infocentric.ch",
       "url": "https://github.com/infocentric"
+    },
+    {
+      "name": "Stephan Ullenboom",
+      "email": "stephan.ullenboom@47northlabs.ch",
+      "url": "https://gitlab.com/47northlabs/public"
     }
   ],
   "license": "ISC",
